Fix bib / code layout bug

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -947,6 +947,7 @@ pre {
     border-radius: 0;
     margin-bottom: 0;
     padding: 0;
+    white-space: inherit;
   }
 }
 
